# vuetom-box

./: .eslintrc-auto-import.json  .eslintrc.js  .prettierrc  CHANGELOG.md  README.md  README.zh_CN.md  auto-imports.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/json/: en.json  zh_HK.json
src-tauri/src/: lang.rs  main.rs  menu.rs  tray.rs  winv.rs
src-tauri/src/events/: system.rs
src/assets/css/: app.scss  colors.scss  rewriteui.scss  scroll.scss  theme.scss  transition.scss  vars.scss  winsize.scss
src/assets/iconfonts/: iconfont.css
src/common/: config.ts  dialog.ts  enum.ts  notify.ts
src/components/: Home.tsx  index.ts
src/components/404/: index.tsx
src/components/Box/: BoxCard.scss  BoxCard.tsx
src/components/Form/: FormButton.scss  FormButton.tsx
src/components/Icons/: NavbarBack.vue  ToolbarClose.vue  ToolbarMax.vue  ToolbarMin.vue  VTArrowRight.vue
src/components/Menu/: index.scss  index.tsx
src/components/Navbar/: index.scss  index.tsx
src/components/Right/: index.scss  index.tsx
src/components/Switch/: VPSwitch.vue  VPSwitchAppearance.vue
src/components/Toolbar/: index.scss  index.tsx
src/i18n/: index.ts
src/i18n/languages/: en.ts  zh-CN.ts  zh-HK.ts
src/layouts/Home/: index.tsx
src/layouts/MenuLeft/: index.scss  index.tsx
src/layouts/NavLeft/: index.scss  index.tsx
src/layouts/NavRight/: index.scss  (+1 more)
src/routes/: index.ts  routerStatic.ts
src/store/: index.ts
src/types/: index.d.ts
(+19 files in other folders)
