[package]
name = "vuetom-box"
version = "0.0.2"
description = "A Tools Box"
authors = ["lauset"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their desfinitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tauri = { version = "1.2.0", features = ["api-all", "icon-png", "macos-private-api", "system-tray"] }
window-vibrancy = "0.3.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
